@@ -1,6 +1,7 @@
 package com.friendzoo.api.domain.product.service;
 
 
+import com.friendzoo.api.domain.heart.entity.Heart;
 import com.friendzoo.api.domain.product.entity.ProductImage;
 import com.friendzoo.api.domain.heart.repository.HeartRepository;
 import com.friendzoo.api.domain.product.dto.ProductDTO;
@@ -16,6 +17,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Slf4j
@@ -29,34 +31,31 @@ public class ProductServiceImpl implements ProductService {
 
     @Override
     public List<ProductDTO> getBestProducts(ProductDTO productDTO) {
-                List<Product> dtoLists = productRepository.findBestProducts();
-                List<ProductDTO> dtoList = dtoLists.stream()
-                        .map(this::entityToDTO) // Product를 ProductDTO로 변환
-                        .collect(Collectors.toList()); // 리스트로 수집
-                return dtoList;
+        List<Product> dtoLists = productRepository.findBestProducts();
+        List<ProductDTO> dtoList = dtoLists.stream()
+                .map(this::entityToDTO) // Product를 ProductDTO로 변환
+                .collect(Collectors.toList()); // 리스트로 수집
+        return dtoList;
 
     }
+
     @Override
     public List<ProductDTO> getMdPickProducts(ProductDTO productDTO) {
-                List<Product> dtoLists = productRepository.findMdPickProducts();
-                List<ProductDTO> dtoList = dtoLists.stream()
-                        .map(this::entityToDTO) // Product를 ProductDTO로 변환
-                        .collect(Collectors.toList()); // 리스트로 수집
-                return dtoList;
-            }
+        List<Product> dtoLists = productRepository.findMdPickProducts();
+        List<ProductDTO> dtoList = dtoLists.stream()
+                .map(this::entityToDTO) // Product를 ProductDTO로 변환
+                .collect(Collectors.toList()); // 리스트로 수집
+        return dtoList;
+    }
 
     public List<ProductDTO> getNewProduct(ProductDTO productDTO) {
 //Sort.by(""); asc
-        List<Product> dtoLists = productRepository.findNewProducts(Sort.by(Sort.Direction.DESC,"createdAt"));
+        List<Product> dtoLists = productRepository.findNewProducts(Sort.by(Sort.Order.desc("createdAt")));
         List<ProductDTO> dtoList = dtoLists.stream()
                 .map(this::entityToDTO) // Product를 ProductDTO로 변환
                 .toList(); // 리스트로 수집
         return dtoList;
 
-    }
-    @Override
-    public ProductDTO getDTO(ProductDTO productDTO) {
-        return null;
     }
 
     @Override
@@ -68,40 +67,41 @@ public class ProductServiceImpl implements ProductService {
         return dtoList;
     }
 
+    @Transactional(readOnly = true)
     @Override
-    public ProductDTO getSelectedItem(String email,Long productId) {
-        Product product = productRepository.findDetailProduct(email,productId);
-            // isHeart 여부 <- product, email
-            boolean isHeart = heartRepository.findProductHeart(email,product.getId());
-            ProductDTO dto = ProductDTO.builder()
-                    .id(product.getId())
-                    .name(product.getName())
-                    .category(product.getCategory() != null ? product.getCategory().getId() : null)
-                    .price(product.getPrice())
-                    .best(product.getBest())
-                    .mdPick(product.getMdPick())
-                    .uploadFileNames(product.getImageList().stream().map(ProductImage::getImageName).toList())
-                    .isHeart(isHeart)
-                    .description(product.getDescription())
-                    .stockNumber(product.getStockNumber())
-                    .categoryId(product.getCategory().getId())
-                    .createdAt(product.getCreatedAt())
-                    .modifiedAt(product.getModifiedAt())
-                    .discountPrice(product.getDiscountPrice())
-                    .build();
-
+    public ProductDTO getSelectedItem(String email, Long productId) {
+        Product product = this.getEntity(productId);
+        ProductDTO dto = this.entityToDTO(product);
+        // isHeart 여부 <- product, email
+        changeHeartProductDTO(email, product, dto);
         return dto;
     }
 
     @Override
-    public List<ProductDTO> getSelectedCategoryItem(Long id) {
-        List<Product> dtoLists = productRepository.findrelatedItem(id);
-        List<ProductDTO> dtoList = dtoLists.stream()
-                .map(this::entityToDTO) // Product를 ProductDTO로 변환
-                .collect(Collectors.toList()); // 리스트로 수집
-        return dtoList;
+    public List<ProductDTO> getSelectedCategoryItem(String email, Long id) {
+        List<Product> dtoList = productRepository.findrelatedItem(id);
+        return dtoList.stream()
+                .map(product -> {
+                    ProductDTO dto = this.entityToDTO(product);
+                    changeHeartProductDTO(email, product, dto);
+                    return dto;
+                })
+                .toList();
     }
 
+    @Transactional(readOnly = true)
+    @Override
+    public List<ProductDTO> getAllList(String email, ProductDTO productDTO) {
+        List<Product> dtoList = productRepository.findAllByDTO(productDTO);
+
+        return dtoList.stream()
+                .map(product -> {
+                    ProductDTO dto = this.entityToDTO(product);
+                    changeHeartProductDTO(email, product, dto);
+                    return dto;
+                })
+                .toList();
+    }
 
     @Transactional(readOnly = true)
     @Override
@@ -116,5 +116,22 @@ public class ProductServiceImpl implements ProductService {
     public Product getEntity(Long productId) {
         return productRepository.findById(productId).
                 orElseThrow(() -> new EntityNotFoundException("해당 상품이 존재하지 않습니다. productId: " + productId));
+    }
+
+
+    /**
+     * Product -> ProductDTO heart 여부 추가
+     * @param email 사용자 이메일
+     * @param product 상품
+     * @param dto ProductDTO
+     */
+    private void changeHeartProductDTO(String email, Product product, ProductDTO dto) {
+        // isHeart 여부 <- product, email
+        if(email == null) {
+            return;
+        }
+        Optional<Heart> heartOptional = heartRepository.findHeartProduct(email, product.getId());
+        log.info("heartOptional: {}", heartOptional);
+        dto.setHeart(heartOptional.isPresent());
     }
 }
